--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "classlist.js": "1.1.20150312",
         "d3": "5.9.7",
         "date-fns": "1.30.1",
+        "file-saver": "2.0.2",
         "hammerjs": "2.0.8",
         "lodash": "4.17.15",
         "moment": "2.24.0",
@@ -58,6 +59,7 @@
         "prismjs": "1.16.0",
         "rxjs": "6.5.2",
         "web-animations-js": "2.3.2",
+        "xlsx": "0.15.3",
         "zone.js": "0.9.1"
     },
     "devDependencies": {
