--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
         "@angular/platform-browser": "8.1.2",
         "@angular/platform-browser-dynamic": "8.1.2",
         "@angular/router": "8.1.2",
+        "@ckeditor/ckeditor5-angular": "1.1.2",
+        "@ckeditor/ckeditor5-build-classic": "16.0.0",
+        "@ckeditor/ckeditor5-build-decoupled-document": "16.0.0",
+        "@ckeditor/ckeditor5-build-inline": "16.0.0",
         "@ngrx/effects": "8.1.0",
         "@ngrx/router-store": "8.1.0",
         "@ngrx/store": "8.1.0",
