--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
                             "src/app/main/angular-material-elements"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "./node_modules/quill/dist/quill.core.css",
+                            "./node_modules/quill/dist/quill.snow.css"
+
                         ],
                         "scripts": [],
                         "showCircularDependencies": false
