--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@ckeditor/ckeditor5-build-classic": "16.0.0",
         "@ckeditor/ckeditor5-build-decoupled-document": "16.0.0",
         "@ckeditor/ckeditor5-build-inline": "16.0.0",
+        "@editorjs/editorjs": "2.16.1",
         "@ngrx/effects": "8.1.0",
         "@ngrx/router-store": "8.1.0",
         "@ngrx/store": "8.1.0",
@@ -59,19 +60,23 @@
         "ngrx-store-freeze": "0.2.4",
         "ngx-color-picker": "8.1.0",
         "ngx-cookie-service": "2.2.0",
+        "ngx-quill": "7.3.11",
         "perfect-scrollbar": "1.4.0",
         "prismjs": "1.16.0",
+        "quill": "1.3.6",
         "rxjs": "6.5.2",
         "web-animations-js": "2.3.2",
         "xlsx": "0.15.3",
         "zone.js": "0.9.1"
     },
     "devDependencies": {
+        "@angular-devkit/build-angular": "0.801.2",
         "@angular/cli": "8.1.2",
         "@angular/compiler-cli": "8.1.2",
         "@angular/language-service": "8.1.2",
-        "@angular-devkit/build-angular": "0.801.2",
         "@angularclass/hmr": "2.1.3",
+        "@editorjs/header": "2.3.2",
+        "@editorjs/list": "1.4.0",
         "@types/jasmine": "3.3.14",
         "@types/jasminewd2": "2.0.6",
         "@types/lodash": "4.14.136",
