--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@swimlane/ngx-dnd": "8.0.0",
         "@types/prismjs": "1.16.0",
         "angular-calendar": "0.27.13",
+        "angular-email-editor": "0.5.2",
         "angular-in-memory-web-api": "0.8.0",
         "chart.js": "2.8.0",
         "classlist.js": "1.1.20150312",
@@ -55,10 +56,8 @@
         "ngrx-store-freeze": "0.2.4",
         "ngx-color-picker": "8.1.0",
         "ngx-cookie-service": "2.2.0",
-        "ngx-quill": "6.3.1",
         "perfect-scrollbar": "1.4.0",
         "prismjs": "1.16.0",
-        "quill": "1.3.6",
         "rxjs": "6.5.2",
         "web-animations-js": "2.3.2",
         "xlsx": "0.15.3",
