--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "angular-calendar": "0.27.13",
         "angular-email-editor": "0.5.2",
         "angular-in-memory-web-api": "0.8.0",
+        "angularx-qrcode": "2.1.0",
         "chart.js": "2.8.0",
         "classlist.js": "1.1.20150312",
         "d3": "5.9.7",
