--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-devkit/build-angular": "0.801.2",
+        "@angular/cli": "8.1.2",
+        "@angular/compiler-cli": "8.1.2",
+        "@angular/language-service": "8.1.2",
+        "@angularclass/hmr": "2.1.3",
         "@agm/core": "1.0.0-beta.7",
         "@angular/animations": "8.1.2",
         "@angular/cdk": "8.1.1",
