--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "start": "ng serve --open",
         "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
         "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-        "build": "node --max_old_space_size=6144 /usr/local/lib/node_modules/@angular/cli/bin/ng build --prod",
+        "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
         "build-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev --stats-json",
-        "build-prod": "node --max_old_space_size=6144 /usr/local/lib/node_modules/@angular/cli/bin/ng build --prod",
+        "build-prod": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
         "build-prod-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
         "test": "ng test",
         "lint": "ng lint",
