--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/build-angular": "0.801.2",
-        "@angular/cli": "8.1.2",
-        "@angular/compiler-cli": "8.1.2",
-        "@angular/language-service": "8.1.2",
-        "@angularclass/hmr": "2.1.3",
         "@agm/core": "1.0.0-beta.7",
+        "@angular-devkit/build-angular": "0.801.2",
         "@angular/animations": "8.1.2",
         "@angular/cdk": "8.1.1",
+        "@angular/cli": "8.1.2",
         "@angular/common": "8.1.2",
         "@angular/compiler": "8.1.2",
+        "@angular/compiler-cli": "8.1.2",
         "@angular/core": "8.1.2",
         "@angular/flex-layout": "8.0.0-beta.26",
         "@angular/forms": "8.1.2",
+        "@angular/language-service": "8.1.2",
         "@angular/material": "8.1.1",
         "@angular/material-moment-adapter": "8.1.1",
         "@angular/platform-browser": "8.1.2",
         "@angular/platform-browser-dynamic": "8.1.2",
         "@angular/router": "8.1.2",
+        "@angularclass/hmr": "2.1.3",
         "@ngrx/effects": "8.1.0",
         "@ngrx/router-store": "8.1.0",
         "@ngrx/store": "8.1.0",
@@ -62,6 +62,7 @@
         "ngrx-store-freeze": "0.2.4",
         "ngx-color-picker": "8.1.0",
         "ngx-cookie-service": "2.2.0",
+        "ngx-image-compress": "8.0.4",
         "ngx-socket-io": "3.0.1",
         "perfect-scrollbar": "1.4.0",
         "prismjs": "1.16.0",
